[582466] RCP UI tests VM won't start because of obsolete -XX:MaxPermSize
Remove the parameter completely, assuming it is not required any longer
because of new defaults

Change-Id: I36bfc7922b4940cd55a1b0fefdc6961f40704f0e