@@ -28,7 +28,7 @@
 	<properties>
 		<!-- Please don't pretty-format the vmparams line -->
 		<!-- a new line in the vmparams caused issues with starting the tests, at least on Mac -->
-		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Xmx512m -XX:MaxPermSize=256m</uitest.vmparams>
+		<uitest.vmparams>-Dorg.eclipse.swtbot.search.timeout=30000 -Xmx512m</uitest.vmparams>
 	</properties>
 
 	<profiles>
